# my-game-server

./: CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  schema.sql  vcpkg.json
config/: example.cfg
docs/: protocol.md
docs/actions/: CRE.md  DFY.md  DIE.md  ERR.md  GOD.md  JON.md  LVE.md  NXT.md  OVE.md  POS.md  SHT.md  SPW.md  STP.md  STR.md  STS.md
docs/lua/: stubs.lua
examples/: boss-wave.lua  default-wave.lua  simple-wave.lua
include/: Types.hpp  Variables.hpp
include/Action/: AAction.hpp  Dispatcher.hpp  IAction.hpp
include/Action/List/: CRE.hpp  DFY.hpp  DIE.hpp  ERR.hpp  GOD.hpp  JON.hpp  LST.hpp  LVE.hpp  NXT.hpp  OVE.hpp  POS.hpp  SHT.hpp  SPW.hpp  STP.hpp  STR.hpp  STS.hpp
include/Engine/: Collision.hpp  Game.hpp  Wave.hpp
include/Exception/: EmptyMessageQueue.hpp  Generic.hpp
include/Exception/Action/: NotConnected.hpp  NotImplemented.hpp
include/Exception/Game/: AlreadyExists.hpp  NotExists.hpp
include/Miscellaneous/: Clock.hpp  Environment.hpp  Logger.hpp  Maths.hpp  Password.hpp  Singleton.hpp  Utils.hpp
include/Network/: Player.hpp  Transceiver.hpp
include/Storage/: Database.hpp  Game.hpp  Player.hpp
include/Wrapper/: Socket.hpp
src/: Main.cpp
src/Action/: AAction.cpp  Dispatcher.cpp
src/Action/List/: CRE.cpp  (+14 more)
src/Engine/: Collision.cpp  Game.cpp  Wave.cpp
src/Exception/: EmptyMessageQueue.cpp  Generic.cpp
src/Miscellaneous/: Clock.cpp  Environment.cpp  Logger.cpp  Password.cpp  Utils.cpp
src/Network/: Player.cpp  Transceiver.cpp
src/Storage/: Database.cpp  Game.cpp  Player.cpp
src/Wrapper/: Socket.cpp
(+12 files in other folders)
